# bandit-action

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  setup.cfg  setup.py
bandit_github_formatter/: formatter.py
