[metadata]
name = bandit-github-formatter
version = v1.0
author = Melih Değiş
author_email = melihdegis@gmail.com
summary = A Bandit formatter for the GitHub PRs.
home_page = https://github.com/mdegis/bandit-action
description_file = README.md
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
python_requires = >= 2.7
install_requires =
    bandit==1.7.0
    requests==2.25.1

[files]
packages =
    bandit_github_formatter

[entry_points]
bandit.formatters =
    github = bandit_github_formatter.formatter:report